Fixed alignment of Next Testcase button

--- a/src/webview/judge/index.css
+++ b/src/webview/judge/index.css
@@ -23,7 +23,7 @@
 /* Main View */
 
 .new-testcase-button .codicon {
-  margin-right: 3px;
+  margin-right: 6px;
 }
 
 #empty-state {
